Fixed loading banner clipping

--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,7 @@ canvas.webgl{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    max-width: 600px;
+    max-width: 700px;
     background-image: url('../static//loading_banner.png') ;
     background-position: center;
     background-repeat: no-repeat;
